Adding third project [bootstrap]

--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
 <!DOCTYPE html>
 <html>
    <body>
-    1.&nbsp; &nbsp;<a href="frontend/projects/project1/TicTacToe.html">TIC TAC TOE (Only display)</a>
-    2.&nbsp; &nbsp;<a href="frontend/projects/project2/blog.html">WildLife Gallery </a>
-    2.&nbsp; &nbsp;<a href="frontend/projects/prj3/simpleblog.html">My simple blog </a>
-      
       <h3>Bootstrap Projects</h3>
       =====================================
+	  <br>
     <ol>  
-       <li><a href="frontend/projects/bootstrap/Enno_project1/index.html">Enno</a> </li>
+       <li><a href="frontend/projects/bootstrap/Enno_project1/Solution/my_codes/index.html" >Enno</a> </li>
 	   <li><a href="frontend/projects/bootstrap/LiveCamp_project2/index.html">liveCamp</a> </li>
+	   <li><a href="frontend/projects/bootstrap/candy_project3/Starter/index.html">Museum of candy</a> </li>
     </ol>
       
   </body>
 </html>
+
